[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.1",
    "importlib-metadata>=8.7.0",
    "manim>=0.19.0",
    "manim-voiceover[elevenlabs,gtts,transcribe]>=0.3.7",
    "matplotlib>=3.9.4",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
